refactor CallbackHandler to work with char[]